--- a/jfreereport/README
+++ b/jfreereport/README
@@ -1,13 +1,13 @@
 ***********************************************
-* JFREEREPORT 0.7.2 INSTALLATION INSTRUCTIONS *
+* JFREEREPORT 0.7.3 INSTALLATION INSTRUCTIONS *
 ***********************************************
 
-Written by David Gilbert, 15 May 2002.
+Written by David Gilbert, 09 Jun 2002.
 
 1. INTRODUCTION
 ---------------
 This document describes how to download and install the latest version
-of JFreeReport (0.7.2).  The procedure has changed from the previous
+of JFreeReport (0.7.3).  The procedure has changed from the previous
 version, as the release is now being packaged up by Thomas Morgner,
 the new Project Leader for JFreeReport.
 
@@ -19,31 +19,25 @@ JFreeReport project page on SourceForge:
 http://sourceforge.net/projects/jfreereport
 
 You need to download all of the following files (I'd recommend saving
-them to a new directory called jfreereport-0.7.2):
+them to a new directory called jfreereport-0.7.3):
 
-- jfreereport-0.7.2.jar     : the JFreeReport runtime jar file;
-- jfreereport-res-0.7.2.jar : icons and other resources;
-- jfreereport-src-0.7.2.jar : source code files;
+- jfreereport-0.7.3.jar     : the JFreeReport runtime jar file;
+- jfreereport-src-0.7.3.jar : source code files;
 - pixie.jar                 : the Pixie runtime jar file;
 - pixie-res.jar             : resources for Pixie;
 - pixie-src.jar             : Pixie source code;
-- libs.jar                  : runtime jar files for the libraries used
-                              by JFreeReport.
+- start-demo.jar            : A jar to start the demo application
+- libs.zip                  : collection file for the libraries used
+                              by JFreeReport. Contains all libraries needed
+                              to run the demo.
 
 3. UNPACKING
 ------------
 You need to unpack some of the jar files in order to run the
 demonstration application.
 
-First, create a subdirectory called resources, within the
-jfreereport-0.7.2 directory that you created.  Move the
-jfreereport-res-0.7.2.jar file to this new subdirectory, then run the
-jar utility to unpack the files:
-
-jar -xvf jfreereport-res-0.7.2.jar
-
-Second, create a subdirectory called libs within the
-jfreereport-0.7.2 directory.  Move the libs.zip file to this new
+Create a subdirectory called libs within the
+jfreereport-0.7.3 directory.  Move the libs.zip file to this new
 subdirectory, and unzip it:
 
 unzip libs.zip
@@ -51,10 +45,11 @@ unzip libs.zip
 This extracts the following jar files:
 
 gnujaxp.jar
-iText.jar
+itext-0.92.jar
 jcommon-0.6.1.jar
 junit.jar
 pixie.jar
+start-demo.jar
 
 As an optional last step, create a subdirectory called source within
 the jfreereport-0.7.2 directory.  Move the jfreereport-src-0.7.2.jar
@@ -69,19 +64,13 @@ This extracts all the source code files.
 4. RUNNING THE DEMONSTRATION APPLICATION
 ----------------------------------------
 To run the demonstration application, type the following command from
-the jfreereport-0.7.2 directory:
+the jfreereport-0.7.3 directory:
 
-java -classpath
-jfreereport-0.7.2.jar:libs/jcommon-0.6.1.jar:libs/gnujaxp.jar:libs/iText.jar:libs/pixie.jar:./resources
-com.jrefinery.report.demo.JFreeReportDemo
-
-Note that the above command should be entered on a single command
-line.  On Windows, substitute a semi-colon for the colon as the path
-separator in the classpath setting, and use backslashes instead of
-forward slashes.
+java -jar start-demo.jar
 
 5. FEEDBACK
 -----------
 Please post your feedback in the JFreeReport forum at:
 
 http://www.object-refinery.com/jfreereport/index.html
+
