--- a/jfreereport/README
+++ b/jfreereport/README
@@ -28,7 +28,8 @@ them to a new directory called jfreereport-0.7.3):
 - pixie-src.jar             : Pixie source code;
 - start-demo.jar            : A jar to start the demo application
 - libs.zip                  : collection file for the libraries used
-                              by JFreeReport. Contains all libraries needed
+                              by JFreeReport.
+ Contains all libraries needed
                               to run the demo.
 
 3. UNPACKING
@@ -66,7 +67,8 @@ This extracts all the source code files.
 To run the demonstration application, type the following command from
 the jfreereport-0.7.3 directory:
 
-java -jar start-demo.jar
+java -jar 
+start-demo.jar
 
 5. FEEDBACK
 -----------
