--- a/pixie/README
+++ b/pixie/README
@@ -1,1 +1,7 @@
+Pixie is a WMF-File reading library originally written by David R. Harris as
+converter for the Pixie-ImageViewer. Pixie was long time dead and is currently
+resurrected as WMF-Reader and ImageProducer for Java 1.2.2 or higher.
+
+Pixie lacks the support for most BitMap-Formats but everything else is working
+fine. Write-Support is beeing implemented somewhere in the near future.
 
