--- a/jfreereport/README
+++ b/jfreereport/README
@@ -1,13 +1,13 @@
 ***********************************************
-* JFREEREPORT 0.7.4 INSTALLATION INSTRUCTIONS *
+* JFREEREPORT 0.7.6 INSTALLATION INSTRUCTIONS *
 ***********************************************
 
-Written by David Gilbert, 10 Jun 2002.
+Written by David Gilbert, 08 Sep 2002.
 
 1. INTRODUCTION
 ---------------
 This document describes how to download and install the latest version
-of JFreeReport (0.7.4).  The procedure has changed from the previous
+of JFreeReport (0.7.6).  The procedure has changed from the previous
 version, as the release is now being packaged up by Thomas Morgner,
 the new Project Leader for JFreeReport.
 
@@ -19,45 +19,44 @@ JFreeReport project page on SourceForge:
 http://sourceforge.net/projects/jfreereport
 
 You need to download all of the following files (I'd recommend saving
-them to a new directory called jfreereport-0.7.4):
+them to a new directory called jfreereport-0.7.6):
 
-- jfreereport-0.7.4.jar     : the JFreeReport runtime jar file;
-- jfreereport-src-0.7.4.jar : source code files;
+- jfreereport-0.7.6.jar     : the JFreeReport runtime jar file;
+- jfreereport-src-0.7.6.jar : source code files;
 - pixie.jar                 : the Pixie runtime jar file;
 - pixie-res.jar             : resources for Pixie;
 - pixie-src.jar             : Pixie source code;
 - start-demo.jar            : A jar to start the demo application
+- start-first.jar           : A jar to start the "first" example used
+                              in the documentation
 - libs.zip                  : collection file for the libraries used
-                              by JFreeReport.
- Contains all libraries needed
-                              to run the demo.
+                              by JFreeReport. Contains all libraries
+                              needed to run the demo.
 
 3. UNPACKING
 ------------
 You need to unpack some of the jar files in order to run the
 demonstration application.
 
-Create a subdirectory called libs within the
-jfreereport-0.7.4 directory.  Move the libs.zip file to this new
-subdirectory, and unzip it:
+Unzip the libs.zip file in the jfreereport-0.7.6 directory:
 
 unzip libs.zip
 
 This extracts the following jar files:
 
 gnujaxp.jar
-itext-0.92.jar
-jcommon-0.6.1.jar
+itext-0.94.jar
+jcommon-0.7.0.jar
 junit.jar
 pixie.jar
-start-demo.jar
+bsh-1.2b6.jar
 
 As an optional last step, create a subdirectory called source within
-the jfreereport-0.7.2 directory.  Move the jfreereport-src-0.7.2.jar
+the jfreereport-0.7.6 directory.  Move the jfreereport-src-0.7.6.jar
 and pixie-src.jar files to this new subdirectory, then run the jar
 utility to unpack the files:
 
-jar -xvf jfreereport-src-0.7.2.jar
+jar -xvf jfreereport-src-0.7.6.jar
 jar -xvf pixie-src.jar
 
 This extracts all the source code files.
@@ -65,10 +64,9 @@ This extracts all the source code files.
 4. RUNNING THE DEMONSTRATION APPLICATION
 ----------------------------------------
 To run the demonstration application, type the following command from
-the jfreereport-0.7.4 directory:
+the jfreereport-0.7.6 directory:
 
-java -jar 
-start-demo.jar
+java -jar start-demo.jar
 
 5. FEEDBACK
 -----------
