More changes (Code-optimization), replaced EntityResolver2 with older EntityResolver to fix WebSphere problem ...

--- a/jfreereport/TODO.txt
+++ b/jfreereport/TODO.txt
@@ -12,3 +12,4 @@
   - parse TTF-Files for supported Charsets/Unicode-Ranges
   - automaticly adjust encoding if nessesary
 * Formated Text support for printing (RTF, HTML)
+* Control LineSpacing for TextElements
