--- a/jfreereport/TODO.txt
+++ b/jfreereport/TODO.txt
@@ -12,4 +12,7 @@
   - parse TTF-Files for supported Charsets/Unicode-Ranges
   - automaticly adjust encoding if nessesary
 * Formated Text support for printing (RTF, HTML)
-* Control LineSpacing for TextElements
+* Create a report configuration interface for the TableTargets
+* Add Drawable Support
+* Implement JFreeChart adapter and Barcode stuff
+  
