--- a/jfreereport/TODO.txt
+++ b/jfreereport/TODO.txt
@@ -16,3 +16,4 @@
 * Add Drawable Support
 * Implement JFreeChart adapter and Barcode stuff
 * External style definitions for the ext-parser
+* Watermarks for Pages ...
